syntax = "proto3";
package proto;
option go_package = "./proto";

message JwtToken {
    string token = 1;
}

message StatusResponse {
    string status = 1;
}